fix text-align has not effect on content #657

--- a/scss/_toast.scss
+++ b/scss/_toast.scss
@@ -22,6 +22,9 @@
     padding: 6px;
     display: flex;
     align-items: center;
+    & > div:last-child {
+      flex: 1;
+    }
   }
   &-icon {
     margin-inline-end: 10px;
